--- a/TODO/todo_note/requirements.txt
+++ b/TODO/todo_note/requirements.txt
@@ -6,13 +6,17 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 environ==1.0
 environs==9.5.0
+Faker==12.0.1
 importlib-metadata==4.11.1
 Markdown==3.3.6
 marshmallow==3.15.0
+mixer==7.2.2
 packaging==21.3
 PyJWT==2.3.0
 pyparsing==3.0.7
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
 zipp==3.7.0
