--- a/TODO/production/docker-compose.yml
+++ b/TODO/production/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 5432:5432
     environment:
       POSTGRES_USER: django
-      POSTGRES_PASSWORD: geekbrains
+      POSTGRES_PASSWORD: 1
       POSTGRES_DB: todo_notes
 
   backend:
